# hf-core

./: .gitmodules  0001-fix-handle-multiline-YAML-format-in-config-parser-fa.patch  404.html  README.md  STM32H7_PORTING.md  SUBMODULE_FIX_README.md  SUMMARY.md  YQ_INSTALLATION_FIX.md  index.html  version_selector.html
.github/workflows/: ci-cpp-analysis.yml  ci-cpp-lint.yml  ci-docs-linkcheck.yml  ci-docs-publish.yml  ci-markdown-lint.yml  ci-yaml-lint.yml  esp32-examples-build-ci.yml  local-esp-idf-build.yml  release.yml
_config/: .clang-format  .clang-tidy  .markdownlint.json  .yamllint  Doxyfile  _config.yml  lychee.toml
cmake/: hf_core_build_settings.cmake
development/: README.html  STM32H7_PORTING.html  STM32H7_PORTING.md  feed.xml  index.html  robots.txt  sitemap.xml  version_info.json
development/api/: Ads7952Handler_8cpp__incl.map  Ads7952Handler_8cpp__incl.md5  Ads7952Handler_8h.html  Ads7952Handler_8h__dep__incl.md5  Ads7952Handler_8h__incl.md5  AlicatBasis2Handler_8cpp__incl.md5  AlicatBasis2Handler_8h.js  AlicatBasis2Handler_8h_source.html  As5047uHandler_8cpp.html  As5047uHandler_8cpp.js  As5047uHandler_8cpp__incl.map  As5047uHandler_8cpp__incl.md5  As5047uHandler_8h.html  As5047uHandler_8h__incl.map  As5047uHandler_8h__incl.md5  As5047uHandler_8h_ae4489a63be6104ea4bf536da5229a5e1_icgraph.md5  As5047uHandler_8h_source.html  Bno08xHandler_8cpp.html  Bno08xHandler_8cpp__incl.md5  Bno08xHandler_8h.html  Bno08xHandler_8h.js  Bno08xHandler_8h__incl.map  Bno08xHandler_8h__incl.md5  Bno08xHandler_8h_source.html  CO__driver__target_8h.html  CO__driver__target_8h__incl.md5  CO__driver__vortex_8c.js  CO__driver__vortex_8c_a11342ac2a7122e6366facafba7623df4_cgraph.map  CO__driver__vortex_8c_a11342ac2a7122e6366facafba7623df4_cgraph.md5  CO__driver__vortex_8c_a4664a9f5d547cb0605a9e929fb079f2e_cgraph.md5  CO__driver__vortex_8c_a5ff78dd77aed030750bac47b040730c0_icgraph.map  CO__driver__vortex_8c_a834549a0cd6a8a115e23f2f1be38458e_icgraph.md5  CanOpenBaseCanLink_8hpp.html  CanOpenBaseCanLink_8hpp.js  CanOpenBaseCanLink_8hpp_source.html  EspLoggerFactory_8cpp.html  EspLoggerFactory_8cpp.js  EspLoggerFactory_8cpp__incl.map  Fdo2Handler_8cpp__incl.map  Fdo2Handler_8h.html  (+1152 more)
development/cmake/: hf_core_build_settings.cmake
development/docs/: architecture.html  folder_structure.html
development/doxs/: version_selector.js
development/examples/esp32/components/hf_core/: CMakeLists.txt  idf_component.yml
docs/: architecture.md  cmake_integration.md  folder_structure.md  index.md
docs/handlers/: as5047u_handler.md  bno08x_handler.md  index.md  logger.md  max22200_handler.md  ntc_temperature_handler.md  pca9685_handler.md  pcal95555_handler.md  pf1550_handler.md  se050_handler.md  tle92466ed_handler.md  tmc5160_handler.md  tmc9660_handler.md  ws2812_handler.md
docs/testing/: ci_pipelines.md  testing_guide.md
docs/utils/: canopen.md  general_utilities.md  index.md  rtos_wrappers.md
doxs/: versions.json
doxs/development/: Ads7952Handler_8cpp.html  Ads7952Handler_8cpp.js  AlicatBasis2Handler_8cpp.html  AlicatBasis2Handler_8cpp__incl.md5  AlicatBasis2Handler_8h.html  AlicatBasis2Handler_8h__dep__incl.map  AlicatBasis2Handler_8h__incl.map  AlicatBasis2Handler_8h__incl.md5  AlicatBasis2Handler_8h_source.html  As5047uHandler_8cpp.html  As5047uHandler_8cpp__incl.md5  As5047uHandler_8h__dep__incl.map  As5047uHandler_8h__incl.map  As5047uHandler_8h__incl.md5  As5047uHandler_8h_source.html  Bno08xHandler_8cpp.html  Bno08xHandler_8cpp__incl.map  Bno08xHandler_8cpp__incl.md5  Bno08xHandler_8h.html  Bno08xHandler_8h__dep__incl.map  Bno08xHandler_8h__dep__incl.md5  Bno08xHandler_8h__incl.map  Bno08xHandler_8h_a929bff75c00c4ce529177b0640cdf58c_icgraph.map  Bno08xHandler_8h_source.html  CO__driver__target_8h.js  CO__driver__vortex_8c__incl.map  CO__driver__vortex_8c__incl.md5  CO__driver__vortex_8c_a4664a9f5d547cb0605a9e929fb079f2e_cgraph.map  EspLoggerFactory_8cpp.html  Fdo2Handler_8h.js  Fdo2Handler_8h__dep__incl.map  Fdo2Handler_8h__incl.md5  HandlerCommon_8h.html  HandlerCommon_8h.js  HandlerCommon_8h_source.html  HfUtilsCanOpenBridge_8hpp.js  HfUtilsCanOpenBridge_8hpp__dep__incl.map  HfUtilsCanOpenBridge_8hpp_a10b9ba06573aa03ca1e8b5f722ba0d37_icgraph.map  HfUtilsCanOpenBridge_8hpp_a10b9ba06573aa03ca1e8b5f722ba0d37_icgraph.md5  HfUtilsCanOpenTransport_8hpp__incl.map  (+1130 more)
examples/esp32/: app_config.yml
examples/esp32/components/hf_core/: CMakeLists.txt
examples/esp32/main/: CMakeLists.txt  esp32_bus_setup.hpp  esp32_test_config.hpp
examples/esp32/main/handler_tests/: as5047u_handler_comprehensive_test.cpp  bno08x_handler_comprehensive_test.cpp  max22200_handler_comprehensive_test.cpp  pcal95555_handler_comprehensive_test.cpp  se050_handler_comprehensive_test.cpp  tle92466ed_handler_comprehensive_test.cpp  tmc5160_handler_comprehensive_test.cpp  tmc9660_handler_comprehensive_test.cpp  ws2812_handler_comprehensive_test.cpp
examples/esp32/main/utils_tests/: canopen_utils_comprehensive_test.cpp  general_utils_comprehensive_test.cpp
handlers/: HANDLERS_DRIVER_COMPATIBILITY_REVIEW.md
handlers/ads7952/: Ads7952Handler.cpp  Ads7952Handler.h
handlers/alicat_basis2/: AlicatBasis2Handler.cpp  AlicatBasis2Handler.h
handlers/as5047u/: As5047uHandler.cpp  As5047uHandler.h
handlers/bno08x/: Bno08xHandler.cpp  Bno08xHandler.h
handlers/common/: HandlerCommon.h  PlatformMutexBackend.h
handlers/fdo2/: Fdo2Handler.cpp  Fdo2Handler.h
handlers/logger/: LogDecorators.h  Logger.cpp  Logger.h  README.md
handlers/max22200/: Max22200Handler.cpp  Max22200Handler.h
handlers/mcp9700/: Mcp9700TemperatureHandler.cpp  Mcp9700TemperatureHandler.h
handlers/ntc/: NtcTemperatureHandler.cpp  NtcTemperatureHandler.h
handlers/pca9685/: Pca9685Handler.cpp  Pca9685Handler.h
handlers/pcal95555/: Pcal95555Handler.cpp  Pcal95555Handler.h
handlers/pf1550/: Pf1550Handler.cpp  Pf1550Handler.h
handlers/se050/: Se050Handler.cpp  Se050Handler.h
handlers/tle92466ed/: Tle92466edHandler.cpp  Tle92466edHandler.h
patches/: README.md  fallback-parsing-fix.patch  yq-installation-fix.patch
(+2695 files in other folders)
